--- a/sites/all/themes/at2015/sass/_header-navigation.scss
+++ b/sites/all/themes/at2015/sass/_header-navigation.scss
@@ -77,7 +77,8 @@ float: left;
 			font-weight: bold;
 		display: table-cell;
 		text-align: center;
-		width: 100px;
+		min-width: 60px;
+		margin-right: 1em;
 		&.last {
 			margin-right: 0px;
 			}
